--- a/views/templates/showPositions.ejs
+++ b/views/templates/showPositions.ejs
@@ -23,5 +23,6 @@
 	            <span>{{location}}</span>
 	      	</li>
 	    </ul>
+	    <a href="/resume/:id" class="btn btn-default">More &raquo;</a>
     </div>
 </script>
