--- a/views/employer/employer_position_new.ejs
+++ b/views/employer/employer_position_new.ejs
@@ -3,45 +3,67 @@
 	<div id="create_position_from_wrapper">	
 		<form id="position_employer_addition_form" class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
 			
-			<div id="form_element_wrapper">
-	            <label id="name_label">
-	            	Name
-	            </label>
-
-	            <input type="text" name="name" id="input_name_new">
+			<div class="col-lg-12 well well-pd-sm">
+    		<div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label id="name_label" class="control-label" for="input_name">Name</label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="text" name="name" id="input_name" placeholder="" name="input_name" class="form-control input">
+                 </div> 
             </div>
 
-	        <div id="form_element_wrapper">   
-	            <label id="description_label">
-	            	Description
-	            </label>
-
-	            <input type="textarea" name="description" id="input_description_new">
+            <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label id="description_label" class="control-label" for="input_description">Description</label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="text" name="description" id="input_description" placeholder="" name="input_name" class="form-control input" >
+                 </div> 
             </div>
 
-            <div id="form_element_wrapper">
-	            <label id="requirements_label">
-	            	Requirements
-	            </label>
 
-	            <input type="textarea" name="requirements" id="input_requirements_new">
+            <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label class="control-label" for="requirements_label">
+                    	Requirements
+                    </label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="textarea" name="Requirements" id="input_skills" class="form-control input" >
+                 </div> 
+            </div>
+     
+        <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label class="control-label" for="salary_label">
+                        Salary
+                    </label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="textarea" name="salary" id="input_salary" class="form-control input" >
+                 </div> 
             </div>
 
-            <div id="form_element_wrapper">
-	            <label id="salary_label">
-	            	Salary
-	            </label>
+        <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label class="control-label" for="location_label">
+                        Location
+                    </label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="textarea" name="location" id="location_experience" class="form-control input" >
+                 </div> 
+        </div>
 
-	            <input type="textarea" name="salary" id="input_salary_new">
+        <div id="submit_profile_edit_wrapper" class="form-group" align="center" style="margin:15px">
+                 <div class="">
+                    <button id="submit_profile_edit" name="submit_profile" class="btn btn-primary btn-lg" type="submit">
+                        <span class=""></span> Save
+                    </button>
+                </div>
             </div>
-
-			<div id="form_element_wrapper">
-	            <label id="location_label">
-	            	Location
-	            </label>
-
-	            <input type="textarea" name="location" id="input_location_new">
-            </div>
+        </div>
 
 		</form>
 	</div>
