--- a/views/templates/editResumeEmployee.ejs
+++ b/views/templates/editResumeEmployee.ejs
@@ -3,64 +3,77 @@
 		
 	<form id="resume_employee_settings_form" class="form-horizontal" autocomplete="on"
               onsubmit="updateResumeEmployee('{{id}}');return false">
-		
-		<div id="form_element_wrapper">
-            <label id="name_label">
-            	Name
-            </label>
+		<div class="col-lg-12 well well-pd-sm">
+    		<div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label id="name_label" class="control-label" for="input_name">Name</label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="text" name="name" id="input_name" placeholder="" name="input_name" class="form-control input" value="{{name}}">
+                 </div> 
+            </div>
 
-            <input type="text" name="name" id="input_name" value="{{name}}">
-        </div>
-
-        <div id="form_element_wrapper">   
-            <label id="description_label">
-            	Description
-            </label>
-
-            <input type="textarea" name="description" id="input_description" value="{{description}}">
-        </div>
-
-        <div id="form_element_wrapper">
-            <label id="skills_label">
-            	Skills
-            </label>
-
-            <input type="textarea" name="skills" id="input_skills" value="{{skills}}">
-        </div>
-
-        <div id="form_element_wrapper">
-            <label id="experience_label">
-            	Experience
-            </label>
-
-            <input type="textarea" name="experience" id="input_experience" value="{{experience}}">
-        </div>
-
-		<div id="form_element_wrapper">
-            <label id="education_label">
-            	Education
-            </label>
-
-            <input type="textarea" name="education" id="input_education" value="{{education}}">
-        </div>
+            <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label id="description_label" class="control-label" for="input_description">Description</label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="text" name="description" id="input_description" placeholder="" name="input_name" class="form-control input" value="{{description}}">
+                 </div> 
+            </div>
 
 
-		<div id="form_element_wrapper">
-            <label id="salary_label">
-            	Salary
-            </label>
+            <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label class="control-label" for="skills_label">Skills</label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="textarea" name="skills" id="input_skills" class="form-control input" value="{{skills}}">
+                 </div> 
+            </div>
 
-            <input type="textarea" name="salary" id="input_salary" value="{{salary}}">
-        </div>
+            <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label class="control-label" for="experience_label">
+                        Experience
+                    </label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="textarea" name="experience" id="input_experience" class="form-control input" value="{{experience}}">
+                 </div> 
+            </div>
 
-        <div id="submit_resume_edit_wrapper" class="form-group">
-             <div class="">
-                <button id="submit_resume_edit" name="submit_resume" class="btn btn-info" type="submit">
-                    <span class=""></span> Save
-                </button>
+
+            <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label class="control-label" for="education_label">
+                        Education
+                    </label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="textarea" name="education" id="input_education" class="form-control input" value="{{education}}">
+                 </div> 
+            </div>
+
+            <div id="form_element_wrapper" class = "control-group row">
+                <div class="col-md-2">
+                    <label class="control-label" for="salary_label">
+                        Salary
+                    </label>
+                </div>
+                <div class="controls col-md-10" >
+                <input type="textarea" name="salary" id="input_salary" class="form-control input" value="{{salary}}">
+                 </div> 
+            </div>
+            
+            <div id="submit_profile_edit_wrapper" class="form-group" align="center" style="margin:15px">
+                 <div class="">
+                    <button id="submit_profile_edit" name="submit_profile" class="btn btn-primary btn-lg" type="submit">
+                        <span class=""></span> Save
+                    </button>
+                </div>
             </div>
         </div>
-
 	</form>
 	    
 </script>
