19/12/2015 added positions edit

--- a/views/employer/employer_position_new.ejs
+++ b/views/employer/employer_position_new.ejs
@@ -1,7 +1,7 @@
 <% layout('../layout/layout') -%>
 	<h1>Create new position</h1>	
 	<div id="create_position_from_wrapper">	
-		<form id="position_employer_addition_form" class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="return false">
+		<form id="position_employer_addition_form" class="form-horizontal" action="" method="post" autocomplete="on" onsubmit="createPosition();return false">
 			
 			<div class="col-lg-12 well well-pd-sm">
     		<div id="form_element_wrapper" class = "control-group row">
