--- a/views/employer/employer_positions.ejs
+++ b/views/employer/employer_positions.ejs
@@ -14,7 +14,7 @@
 
 <div>
 <form>
-		<nav>
+		<!--<nav>
 		  <ul class="pagination">
 		    <li class="disabled">
 		      <span>
@@ -41,7 +41,7 @@
 		    <li><a href="#">20</a></li>
 		    <li><a href="#">50</a></li>
 		  </ul>
-		</div>
+		</div>-->
 	</form>
 </div>
 
