--- a/views/templates/showPositions.ejs
+++ b/views/templates/showPositions.ejs
@@ -23,6 +23,9 @@
 	            <span>{{location}}</span>
 	      	</li>
 	    </ul>
-	    <a href="/resume/:id" class="btn btn-default">More &raquo;</a>
+	    <div class="btn-group" role="group" aria-label="...">
+	   	<button class="btn btn-default" onclick="showPositionSettings('{{id}}')">Edit position</button>
+
+	   	</div>
     </div>
 </script>
