--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -60,10 +60,10 @@
 
 <div class="container">
   <ul class="nav navbar-nav"> 
-      <li><a href="/employee/joby">index</a></li>
-      <li><a href="/employee/joby/profile">profile</a></li>
-      <li><a href="/employee/joby/resume/new">new resume</a></li>
-      <li><a href="/employee/joby/resume/1">edit resume</a></li>
-      <li><a href="/employee/joby/resumes">resumes</a></li>
+      <li><a href="/employee/">index</a></li>
+      <li><a href="/employee/profile">profile</a></li>
+      <li><a href="/employee/resume/new">new resume</a></li>
+      <li><a href="/employee/resume/1">edit resume</a></li>
+      <li><a href="/employee/resumes">resumes</a></li>
     </ul>
 </div>
