--- a/views/employer/employer_position_new.ejs
+++ b/views/employer/employer_position_new.ejs
@@ -30,11 +30,11 @@
                     </label>
                 </div>
                 <div class="controls col-md-10" >
-                <input type="textarea" name="Requirements" id="input_skills" class="form-control input" >
+                <input type="textarea" name="requirements" id="input_skills" class="form-control input" >
                  </div> 
             </div>
      
-        <div id="form_element_wrapper" class = "control-group row">
+        <!--<div id="form_element_wrapper" class = "control-group row">
                 <div class="col-md-2">
                     <label class="control-label" for="salary_label">
                         Salary
@@ -43,7 +43,7 @@
                 <div class="controls col-md-10" >
                 <input type="textarea" name="salary" id="input_salary" class="form-control input" >
                  </div> 
-            </div>
+            </div>-->
 
         <div id="form_element_wrapper" class = "control-group row">
                 <div class="col-md-2">
