--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -20,51 +20,64 @@
   </div>
 </nav> -->
 
+ <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          
+          <ul class="nav navbar-nav">
+  
+            <% if (auth == true && role == "employer") { %>
+              <!-- TODO add url for employer-->
+              <li><a href="/findEmployee">Find employee</a></li>
+              <li><a href="/postVacancy">Post vacancy</a></li>
+              <li>
+                <ul class="nav navbar-nav"> 
+                  <li><a href='/employer/'>index</a></li>
+                  <li><a href="/employer/profile">profile</a></li>
+                  <li><a href="/employer/position/new">new position</a></li>
+                  <li><a href="/employer/positions">position</a></li>
+                </ul>
+              </li>
+
+            <% } %>
+            <% if (auth == true && role == "employee"){%>
+              <!-- TODO add url for employee-->
+              <li><a href="/findJob">Find job</a></li>
+              <li><a href="/postResume">Post resume</a></li> 
+              <li>
+                <ul class="nav navbar-nav"> 
+                    <li><a href="/employee/">index</a></li>
+                    <li><a href="/employee/profile">profile</a></li>
+                    <li><a href="/employee/resume/new">new resume</a></li>
+                    <li><a href="/employee/resumes">resumes</a></li>
+                  </ul>
+              </li>    
+            
+            <% } %>
+           </ul>
+             
+          <ul class="nav navbar-nav navbar-right">
+            <% if (auth == true) { %>
+                <li>
+                  <a href="/api/auth/logout">Logout</a>
+                </li>
+              <% } else { %>
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/registration">Sign Up</a></li>
+              <% } %>
+          </ul>
+          
+        </div>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+
 <div id="navbar" class="navbar-collapse collapse">
   <ul class="nav navbar-nav">
-    <% if (role == "employer") { %>
-      <!-- TODO add url for employer-->
-      <li><a href="/findEmployee">Find employee</a></li>
-      <li><a href="/postVacancy">Post vacancy</a></li> 
-    <% } else {%>
-      <!-- TODO add url for employee-->
-      <li><a href="/findJob">Find job</a></li>
-      <li><a href="/postResume">Post resume</a></li> 
-    <% } %>
+   
   </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <% if (auth == 'true') { %>
-      <li>      
-        <a href="#">{{role}}</a>
-        <img src="#">{{avatar}}>
-      </li>
-      <li>
-        <a href="/api/auth/logout">Logout</a>
-      </li>
-    <% } else { %>
-      <li><a href="/auth/login">Login</a></li>
-      <li><a href="/auth/registration">Sign Up</a></li>
-    <% } %>
-  </ul>
-</div><!--/.nav-collapse -->
-<% if (role == "employer") { %>
-<div class="container">
-  <ul class="nav navbar-nav"> 
-      <li><a href='/employer/'>index</a></li>
-      <li><a href="/employer/profile">profile</a></li>
-      <li><a href="/employer/position/new">new position</a></li>
-      <li><a href="/employer/positions">position</a></li>
-    </ul>
-</div>
-<% } %>
 
-<% if (role == "employee") { %>
-<div class="container">
-  <ul class="nav navbar-nav"> 
-      <li><a href="/employee/">index</a></li>
-      <li><a href="/employee/profile">profile</a></li>
-      <li><a href="/employee/resume/new">new resume</a></li>
-      <li><a href="/employee/resumes">resumes</a></li>
-    </ul>
-</div>
-<% } %>
+</div><!--/.nav-collapse -->
