--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,7 +2,7 @@
 <h1>Login</h1>
 <form method='POST' action="/api/auth/login">
 	<label>login</label><br>
-	<input type="text" name="login" value="login"><br>
+	<input type="text" name="login" value=""><br>
 	<label>password</label><br>
 	<input type="password" name="password" value="password"><br><br>
 	<input type="submit" value="Send">
