--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -1,11 +1,13 @@
 <% layout('../layout/layout') -%>
-    <h1>Поиск</h1>
-    <form>
+    <h1>Search positions</h1>
+    <form id="search_form" class="form-horizontal" action="" method="post" autocomplete="on"
+                  onsubmit="showSearchPositions();return false">
 	    <input type="text" name="search" value="" size=120 style="align:center">
-	    <input type="submit" value="Отправить">
+	    <input type="submit" value="Find">
     </form>
+
+    <div id="positions_find_list_wrapper"></div>
 
 <% stylesheet('/stylesheets/client/employee.css') -%>
 
-<% script('/javascripts/client/employee.js') -%>   
-<% script('/javascripts/view/employee.js') -%>     
+<% script('/javascripts/client/search.js') -%>   
