--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -2,7 +2,7 @@
     <h1>Search positions</h1>
     <form id="search_form" class="form-horizontal" action="" method="post" autocomplete="on"
                   onsubmit="showSearchPositions();return false">
-	    <input type="text" name="search" value="" size=120 style="align:center">
+	    <input type="text" id="search_text" value="" size=120 style="align:center">
 	    <input type="submit" value="Find">
     </form>
 
