--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -1,4 +1,6 @@
 <% layout('../layout/layout') -%>
+<% include ../templates/showPositions %>
+
     <h1>Search positions</h1>
     <form id="search_form" class="form-horizontal" action="" method="post" autocomplete="on"
                   onsubmit="showSearchPositions();return false">
@@ -8,6 +10,7 @@
 
     <div id="positions_find_list_wrapper"></div>
 
-<% stylesheet('/stylesheets/client/employee.css') -%>
+    <% stylesheet('/stylesheets/client/employee.css') -%>
+    <% stylesheet('/stylesheets/client/search.css') -%>
 
-<% script('/javascripts/client/search.js') -%>   
+<% script('/javascripts/client/search.js') -%>
